--- a/public/index.html
+++ b/public/index.html
@@ -46,21 +46,21 @@
   rel="stylesheet"
 />
 <!-- Google Fonts -->
-<link
+<!-- <link
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
   rel="stylesheet"
-/>
+/> -->
 <!-- MDB -->
-<link
+<!-- <link
   href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css"
   rel="stylesheet"
-/>
+/> -->
 
 <!-- MDB -->
-<script
+<!-- <script
   type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"
-></script>
+></script> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>window.jQuery || document.write('<script src="/path/to/your/jquery.min.js"><\/script>')</script>
